--- a/about/index.html
+++ b/about/index.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="App using Vite + vite-plugin-ssr" />
         <title>Vite SSR app</title>
-      <link rel="stylesheet" type="text/css" href="/dist/client/assets/index.page.de42b54a.css"><link rel="modulepreload" as="script" type="text/javascript" href="/dist/client/assets/vendor.04e658e6.js"></head>
+      <link rel="stylesheet" type="text/css" href="/dist/client/assets/renderer/_default.page.client.js.62f1b031.css"><link rel="modulepreload" as="script" type="text/javascript" href="/dist/client/assets/plugin-vue_export-helper.21dcd24c.js"><link rel="modulepreload" as="script" type="text/javascript" href="/dist/client/assets/vendor.0f0fa52e.js"></head>
       <body>
-        <div id="app"><!--[--><h1>About</h1><p>A colored page.</p><!--]--></div>
-      <script type="module" src="/dist/client/assets/renderer/_default.page.client.js.fd8d6929.js"></script><script id="vite-plugin-ssr_pageContext" type="application/json">{"pageContext":{"_pageId":"/pages/about/index","pageProps":"!undefined","urlPathname":"/about"}}</script></body>
+        <div id="app"><div class="min-h-screen flex flex-col gap-8 justify-center items-center"><h1 class="text-4xl text-blue-500">About Page</h1><a href="/blog/"> Go to home </a></div></div>
+      <script type="module" src="/dist/client/assets/renderer/_default.page.client.js.8a7fe822.js"></script><script id="vite-plugin-ssr_pageContext" type="application/json">{"pageContext":{"_pageId":"/pages/about/index","pageProps":"!undefined","urlPathname":"/about"}}</script></body>
     </html>
