--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="App using Vite + vite-plugin-ssr" />
         <title>Vite SSR app</title>
-      <link rel="modulepreload" as="script" type="text/javascript" href="/dist/client/assets/vendor.04e658e6.js"></head>
+      <link rel="stylesheet" type="text/css" href="/dist/client/assets/renderer/_default.page.client.js.62f1b031.css"><link rel="modulepreload" as="script" type="text/javascript" href="/dist/client/assets/plugin-vue_export-helper.21dcd24c.js"><link rel="modulepreload" as="script" type="text/javascript" href="/dist/client/assets/vendor.0f0fa52e.js"></head>
       <body>
-        <div id="app"><!--[--><h1>Welcome</h1> This page is: <ul><li>Rendered to HTML.</li><li>Interactive. <button type="button">Counter 0</button></li></ul><!--]--></div>
-      <script type="module" src="/dist/client/assets/renderer/_default.page.client.js.fd8d6929.js"></script><script id="vite-plugin-ssr_pageContext" type="application/json">{"pageContext":{"_pageId":"/pages/index/index","pageProps":"!undefined","urlPathname":"/"}}</script></body>
+        <div id="app"><div class="min-h-screen flex flex-col gap-8 justify-center items-center"><h1 class="text-4xl text-blue-500">Home Page</h1><a href="/blog/about"> Go to About </a></div></div>
+      <script type="module" src="/dist/client/assets/renderer/_default.page.client.js.8a7fe822.js"></script><script id="vite-plugin-ssr_pageContext" type="application/json">{"pageContext":{"_pageId":"/pages/index/index","pageProps":"!undefined","urlPathname":"/"}}</script></body>
     </html>
