--- a/about/index.html
+++ b/about/index.html
@@ -2,12 +2,12 @@
     <html lang="en">
       <head>
         <meta charset="UTF-8" />
-        <link rel="icon" href="/dist/client/assets/logo.bebe2e90.svg" />
+        <link rel="icon" href="/blog/assets/logo.bebe2e90.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="App using Vite + vite-plugin-ssr" />
         <title>Vite SSR app</title>
-      <link rel="stylesheet" type="text/css" href="/dist/client/assets/renderer/_default.page.client.js.62f1b031.css"><link rel="modulepreload" as="script" type="text/javascript" href="/dist/client/assets/plugin-vue_export-helper.21dcd24c.js"><link rel="modulepreload" as="script" type="text/javascript" href="/dist/client/assets/vendor.0f0fa52e.js"></head>
+      <link rel="stylesheet" type="text/css" href="/blog/assets/renderer/_default.page.client.js.62f1b031.css"><link rel="modulepreload" as="script" type="text/javascript" href="/blog/assets/plugin-vue_export-helper.21dcd24c.js"><link rel="modulepreload" as="script" type="text/javascript" href="/blog/assets/vendor.31e6b9ee.js"></head>
       <body>
         <div id="app"><div class="min-h-screen flex flex-col gap-8 justify-center items-center"><h1 class="text-4xl text-blue-500">About Page</h1><a href="/blog/"> Go to home </a></div></div>
-      <script type="module" src="/dist/client/assets/renderer/_default.page.client.js.8a7fe822.js"></script><script id="vite-plugin-ssr_pageContext" type="application/json">{"pageContext":{"_pageId":"/pages/about/index","pageProps":"!undefined","urlPathname":"/about"}}</script></body>
+      <script type="module" src="/blog/assets/renderer/_default.page.client.js.6f856ff9.js"></script><script id="vite-plugin-ssr_pageContext" type="application/json">{"pageContext":{"_pageId":"/pages/about/index","pageProps":"!undefined","urlPathname":"/about"}}</script></body>
     </html>
